<resources>

    <string name="app_name">Registro Praxis</string>

    <!--Main menu-->
    <string name="mainMenu_home">Inicio</string>
    <string name="mainMenu_userData">Datos personales</string>
    <string name="mainMenu_clientData">Datos del cliente</string>
    <string name="mainMenu_activities">Actividades</string>
    <string name="mainMenu_about">Acerca de</string>

    <!--Drawer-->
    <string name="open_drawer">Navigation drawer is open</string>
    <string name="close_drawer">Navigation drawer is close</string>
    <string name="home_btn_begin">@string/begin</string>
    <string name="home_btn_food">@string/food</string>
    <string name="home_btn_foodEnd">@string/work</string>
    <string name="home_btn_end">@string/end</string>

    <!--User Data-->
    <string name="userData_hint_completeName">Nombre completo</string>
    <string name="userData_hint_id">Id</string>

    <!--Client Data-->
    <string name="clientData_hint_contact">Contacto Praxis</string>
    <string name="clientData_hint_applicant">Solicitante</string>
    <string name="clientData_hint_assignKey">Clave de Asignación</string>

    <!--RegisterDetail-->
    <string name="registerDetail_title">Detalle de registro</string>
    <string name="registerDetail_head_day">@string/day</string>
    <string name="registerDetail_head_begin">@string/begin</string>
    <string name="registerDetail_head_food">@string/food</string>
    <string name="registerDetail_head_work">@string/work</string>
    <string name="registerDetail_head_end">@string/end</string>

    <!--EditRegister-->
    <string name="editRegister_hint_day">@string/day</string>
    <string name="editRegister_hint_in">@string/begin</string>
    <string name="editRegister_hint_food">@string/food</string>
    <string name="editRegister_hint_work">@string/work</string>
    <string name="editRegister_hint_out">@string/end</string>
    <string name="editRegister_hint_comments">Comentarios</string>
    <string name="editRegister_btn_delete">@string/delete</string>
    <string name="editRegister_btn_cancel">@string/cancel</string>
    <string name="editRegister_btn_save">@string/save</string>

    <!--Activities-->
    <string name="activities_btn_foop1">@string/foop1_title</string>
    <string name="activities_btn_foop2">@string/foop2_title</string>
    <string name="activities_btn_foop3">@string/foop3_title</string>

    <!--FOOP 001-->
    <string name="foop1_title">FOOP 001</string>
    <string name="foop1_hint_job">Puesto</string>
    <string name="foop1_hint_department">Departamento</string>

    <!--FOOP 002-->
    <string name="foop2_title">FOOP 002</string>
    <string name="foop2_hint_application">Aplicación</string>
    <string name="foop2_hint_description">Descripción Corta</string>
    <string name="foop2_hint_description_large">Descripción Larga</string>
    <string name="foop2_hint_justification">Justificación</string>

    <!-- FOOP 003 List -->
    <string name="foop3_list_title">Lista registros FOOP 003</string>
    <string name="foop3_list_head_number">No.</string>
    <string name="foop3_list_head_begin">Inicio</string>
    <string name="foop3_list_head_end">Fin</string>
    <string name="foop3_list_head_scheduled">Horas</string>

    <!-- FOOP 003 Detail -->
    <string name="editFoop3_btn_delete">@string/delete</string>
    <string name="editFoop3_btn_cancel">@string/cancel</string>
    <string name="editFoop3_btn_save">@string/save</string>

    <!--FOOP 003-->
    <string name="foop3_title">FOOP 003</string>
    <string name="foop3_hint_num">Número</string>
    <string name="foop3_hint_description">Descripción Corta</string>
    <string name="foop3_hint_app">Aplicación</string>
    <string name="foop3_hint_begin">Inicio programación</string>
    <string name="foop3_hint_end">Fin programación</string>
    <string name="foop3_hint_scheduledHour">Horas programadas</string>

    <!--Menu-->
    <string name="menu_save">@string/save</string>
    <string name="menu_clean">@string/clean</string>
    <string name="menu_generate_pdf">@string/generate_pdf</string>

    <!--Common-->
    <string name="day">Día</string>
    <string name="begin">Entrada</string>
    <string name="food">Comida</string>
    <string name="work">Fin de comida</string>
    <string name="end">Salida</string>

    <!--Common Buttons-->
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Borrar</string>
    <string name="clean">Limpiar</string>
    <string name="generate_pdf">Generar PDF</string>
    <string name="formattedHour">%1$s:%2$s</string>
    <string name="clientData_hint_company">Compañia</string>

</resources>
