<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="64sp"
                    tools:text="12" />

                <TextView
                    android:id="@+id/txtMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    tools:text="October 2018" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/lnrBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIn"
                style="@style/HomeButtonStyle"
                android:drawableTop="@drawable/ic_in"
                android:src="@drawable/ic_in"
                android:text="@string/home_btn_begin" />

            <Button
                android:id="@+id/btnFood"
                style="@style/HomeButtonStyle"
                android:drawableTop="@drawable/ic_food"
                android:text="@string/home_btn_food"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btnWork"
                style="@style/HomeButtonStyle"
                android:drawableTop="@drawable/ic_work"
                android:text="@string/home_btn_foodEnd"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btnOut"
                style="@style/HomeButtonStyle"
                android:drawableTop="@drawable/ic_out"
                android:text="@string/home_btn_end"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit"
        android:tint="@android:color/white" />

</android.support.design.widget.CoordinatorLayout>